fixed css issue on mobile

--- a/client/src/react/Game.scss
+++ b/client/src/react/Game.scss
@@ -43,6 +43,10 @@
       }
     }
   }
+  .items-wrapper {
+    justify-content: center;
+    display: flex;
+  }
   .items {
     margin-top: 30px;
     display: flex;
@@ -50,7 +54,7 @@
     align-items: center;
   }
   .item {
-    width: 30%;
+    width: 100%;
     max-width: 220px;
     display: flex;
     justify-content: flex-start;
